--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,5 @@
 <h1>This is the Home page</h1>
+
+<li><a href="/register">Register!</a></li>
+<li><a href="/login">LogIn!</a></li>
+<li><a href="/logout">LogOut!</a></li>
