user auth with email as uname

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,11 @@
 <h1>Welcome to Register</h1>
 
 <form action="/register" method="POST">
-    <input type="text" name="username" id="name">
+    <input type="email" name="username" id="name">
     <input type="password" name="password" id="pass">
+    <input type="text" name="name" id="name">
+    <input type="number" name="phone">
+    <input type="text" name="college">
     <input type="submit" name="sub" id="btn">
 </form>
 
