--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,3 +1,6 @@
-<h1>This is the secret page</h1>
+<h1>Secret page</h1>
 
-<li><a href="/logout">LogOut!</a></li>
+<li><h2><%= user.name %></h2></li>
+<li><h2><%= user.username %></h2></li>
+<li><h2><%= user.college %></h2></li>
+<li><h2><%= user.phone %></h2></li>
