--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,9 @@
 <h1>This is the Login Page</h1>
 
+<h2><%= message %><h2>
+
 <form action="/login" method="POST">
-    <input type="text" name="username">
+    <input type="email" name="username">
     <input type="password" name="password">
     <button>LogIn</button>
 </form>
