--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,6 +1,7 @@
 <h1>Secret page</h1>
 
-<li><h2><%= user.name %></h2></li>
-<li><h2><%= user.username %></h2></li>
-<li><h2><%= user.college %></h2></li>
-<li><h2><%= user.phone %></h2></li>
+<img src="<%= user.qr %>">
+<li><h2><%= user.user_.name %></h2></li>
+<li><h2><%= user.user_.username %></h2></li>
+<li><h2><%= user.user_.college %></h2></li>
+<li><h2><%= user.user_.phone %></h2></li>
