--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,7 +1,9 @@
 <h1>Secret page</h1>
 
 <img src="<%= user.qr %>">
-<li><h2><%= user.user_.name %></h2></li>
-<li><h2><%= user.user_.username %></h2></li>
-<li><h2><%= user.user_.college %></h2></li>
-<li><h2><%= user.user_.phone %></h2></li>
+<h2><%= user.user_.name %></h2>
+<h2><%= user.user_.username %></h2>
+<h2><%= user.user_.college %></h2>
+<h2><%= user.user_.phone %></h2>
+
+<button><a href="/update">Update</a></button>
